V2 Cezar persolna site

--- a/index.html
+++ b/index.html
@@ -6,20 +6,21 @@
         <script src="index.js"></script>
     </head>
     <body>
+        <img src="per.jpg">
+        <h1>Hi my name is Cezar</h1>
+        <h2>Fun fucts about me:</h2>
+        <ul>
+            <li>Idiot</li>
+            <li>non value</li>
+            <li>extraordinary</li>
+        </ul>    
+        <p>Please contact me on <a href="https://www.sport.pl/sport-hp/0,0.html" target="_blank">here</a></p>
+        <input type="text" placeholder="Enter e-mail">
+        <button>Join newsletter</button>
         <!-- 
         Challenge 1:
         Write the HTML for your personal website.
         -->
-        <img src="per.jpg">
-        <h1>Hi, my name is Per</h1>
-        <h2>Fun facts about me:</h2>
-        <ul>
-            <li>36 years old</li>
-            <li>Live in Norway</li>
-            <li>Sing in a choir</li>
-        </ul>
-        <p>Please connect with me on <a href="https://www.linkedin.com/in/per-harald-borgen/" taget="_blank">LinkedIn here.</a></p>
-        <input type="text" placeholder="Enter email...">
-        <button>Join newsletter</button>
+        
     </body>
 </html>
